# rust-frontend-example-iced

./: Cargo.toml  README.md  index.html
iced/: rust-frontend-example-iced.d.ts  rust-frontend-example-iced.js  rust-frontend-example-iced_bg.wasm  rust-frontend-example-iced_bg.wasm.d.ts
src/: data.rs  main.rs
