[package]
name = "rust-frontend-example-iced"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_web = "0.4"
iced = { version = "0.3", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.69"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.web-sys]
version = "0.3.32"
features = [
    "Document",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "Storage",
    "Node",
    "Window",
]
